--- a/src/ImgProxy/ImgProxy.csproj
+++ b/src/ImgProxy/ImgProxy.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>0.2.1</Version>
+    <Version>2.1</Version>
     <Authors>Anton Kheistver</Authors>
     <Description>URL generator for imgproxy</Description>
     <Company />
